k8s/mongodb.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  containers:
    - name: mongo
      image: mongo:latest # Replace with the desired MongoDB version
      ports:
        - containerPort: 27017
  #     volumeMounts:
  #       - name: mongo-data
  #         mountPath: /data/db
  # volumes:
  #   - name: mongo-data
  #     emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  # clusterIP: None # Enables pod-to-pod communication directly
