k8s/redis-pv.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: "redis"
  replicas: 1 # Set to the desired number of replicas
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest # Replace with the desired Redis version
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data # Redis's data directory
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: redis-storage # Added to ensure it binds with PV
        resources:
          requests:
            storage: 5Gi # The size requested for the PVC
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
