k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  labels:
    app: url-shortener # should match the app label in containers name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: rdxdocker14/url-shortener:v6 # Replace with your image
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "500m" # 500 milli CPU (0.5 CPU core)
              memory: "256Mi" # 256 MiB of memory
            limits:
              cpu: "1" # 1 CPU core
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      # nodeport is dynamic, you can set it to a fixed value, e.g., 30007
      nodePort: 30007
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
spec:
  rules:
    - host: urlshortener.local # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener
                port:
                  number: 5000
